--- a/web/package.json
+++ b/web/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.5.5",
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
     "axios": "^1.1.2",
@@ -18,12 +19,15 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.4.0",
     "styled-components": "^5.3.5",
+    "uuid": "^9.0.0",
+    "validations-br": "^1.2.0",
     "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^8.3.4",
     "@types/yup": "^0.32.0",
     "@vitejs/plugin-react": "^2.1.0",
     "typescript": "^4.6.4",
