--- a/backend/package.json
+++ b/backend/package.json
@@ -5,14 +5,15 @@
     "main": "index.js",
     "scripts": {
         "build": "tsc",
-        "dev:server": "ts-node-dev --transpile-only --inspect --ignore-watch node_modules src/server.ts",
-        "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
+        "dev:server": "ts-node-dev -r tsconfig-paths/register --transpile-only --inspect --ignore-watch node_modules src/shared/infra/http/server.ts",
+        "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
     },
     "keywords": [],
     "author": "",
     "license": "ISC",
     "devDependencies": {
         "@types/bcryptjs": "^2.4.2",
+        "@types/cors": "^2.8.12",
         "@types/express": "^4.17.14",
         "@types/jsonwebtoken": "^8.5.9",
         "@types/multer": "^1.4.7",
@@ -26,6 +27,7 @@
         "eslint-plugin-promise": "^6.0.1",
         "prettier": "^2.7.1",
         "ts-node-dev": "^2.0.0",
+        "tsconfig-paths": "^4.1.0",
         "typescript": "^4.8.4"
     },
     "dependencies": {
