--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -19,6 +19,9 @@
         "@typescript-eslint/no-unused-vars": ["error" , {
             "argsIgnorePattern": "_"
         }],
+        "@typescript-eslint/interface-name-prefix" : ["error", {
+            "prefixWithI": "always"
+        }],
         "prettier/prettier": "error",
         "import/extensions": [
             "error",
