--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@react-spring/web": "^9.5.5",
     "@unform/core": "^2.1.6",
     "@unform/web": "^2.1.6",
+    "ag-grid-community": "^28.2.1",
+    "ag-grid-react": "^28.2.1",
     "axios": "^1.1.2",
     "polished": "^4.2.2",
     "react": "^18.2.0",
