--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.4.0",
     "styled-components": "^5.3.5",
     "uuid": "^9.0.0",
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/react": "^18.0.21",
     "@types/react-dom": "^18.0.6",
+    "@types/react-input-mask": "^3.0.1",
     "@types/styled-components": "^5.1.26",
     "@types/uuid": "^8.3.4",
     "@types/yup": "^0.32.0",
