--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "ag-grid-community": "^28.2.1",
     "ag-grid-react": "^28.2.1",
     "axios": "^1.1.2",
+    "date-fns": "^2.29.3",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
