sending email on prod

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,5 @@
 APP_SECRET = 144e1d64b8f311048e52e812278a9a6e
 APP_WEB_URL = http://localhost:3000
 APP_API_URL = http://localhost:3333
+SMTP_USER = equipe.frameroom@gmail.com
+SMTP_PASSWORD = imutcxnfqgvkfxmg
