--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.1.2",
     "date-fns": "^2.29.3",
     "framer-motion": "^7.6.12",
+    "moment": "^2.29.4",
     "polished": "^4.2.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
