adding more info on map/updating non-fixed-schedule order

--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 APP_SECRET = 144e1d64b8f311048e52e812278a9a6e
 APP_WEB_URL = http://127.0.0.1:5173
-APP_API_URL = https://msie-jump-always-units.trycloudflare.com
+APP_API_URL = http://localhost:3333
 SMTP_USER = equipe.frameroom@gmail.com
 SMTP_PASSWORD = imutcxnfqgvkfxmg
